# TouristHelper

./: .gitignore  CMakeLists.txt  CMakeListsGPU.txt  Encoders.cpp  Encoders.h  Helpers.cpp  Helpers.h  HelpersGPU.cpp  HelpersGPU.h  LabelEncoder.cpp  LabelEncoderGPU.cpp  LabelEncoderGPU.h  main.cpp  mainGPU.cpp  small_data.csv
Server/: CMakeCache.txt  CMakeLists.txt  HierarchicalCantonEncoder.cpp  Makefile  Server  TouristBackend  cmake_install.cmake  datos_202510_ciudades_unicas_RF.csv  httplib.h  lstm_checkpoint.pt  lstm_model.pt  server.cpp  server_lookup.cpp
backend/: .gitignore  CMakeLists.txt  Helpers.cpp  Helpers.h  main.cpp  mainV2.txt
frontend/crime-risk-dashboard/: package-lock.json  package.json
frontend/crime-risk-dashboard/src/: App.css  App.js  App.jsx  HeatMap.jsx
frontend/crime-risk-dashboard/src/components/: HeatMap.jsx  Probabilities.jsx  SelectProvince.jsx  zonas_mapeadas.json
